# simple_http

./: Cargo.toml
src/: basic_handler.rs  lib.rs  route.rs  router.rs  server.rs  utils.rs
src/route_utils/: basic_handler.rs  callback.rs  mod.rs  route.rs
